force-app/main/default/objects/Vital_Signs__c/Vital_Signs__c.object-meta.xml
<CustomObject>
    <label>Vital Signs</label>
    <pluralLabel>Vital Signs</pluralLabel>
    <nameField>
        <label>Vital Signs Number</label>
        <type>AutoNumber</type>
        <displayFormat>VS-{00000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>