force-app/main/default/objects/Vital_Signs__c/fields/Alert_Level__c.field-meta.xml
<CustomField>
    <fullName>Alert_Level__c</fullName>
    <label>Alert Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
                <default>true</default>
                <label>Normal</label>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>