force-app/main/default/objects/Vital_Signs__c/fields/Blood_Pressure_Diastolic__c.field-meta.xml
<CustomField>
    <fullName>Blood_Pressure_Diastolic__c</fullName>
    <label>Blood Pressure Diastolic</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>