force-app/main/default/objects/Vital_Signs__c/fields/Heart_Rate__c.field-meta.xml
<CustomField>
    <fullName>Heart_Rate__c</fullName>
    <label>Heart Rate (BPM)</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>