force-app/main/default/objects/Vital_Signs__c/fields/Oxygen_Saturation__c.field-meta.xml
<CustomField>
    <fullName>Oxygen_Saturation__c</fullName>
    <label>Oxygen Saturation (%)</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>