force-app/main/default/objects/Vital_Signs__c/fields/Recorded_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Recorded_Date_Time__c</fullName>
    <label>Recorded Date & Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>