force-app/main/default/objects/Vital_Signs__c/fields/Temperature__c.field-meta.xml
<CustomField>
    <fullName>Temperature__c</fullName>
    <label>Temperature (°F)</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>1</scale>
</CustomField>