force-app/main/default/objects/Vital_Signs__c/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <label>Weight (lbs)</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>1</scale>
</CustomField>